# discord-bot1

./: README.md  pyproject.toml
main/: Bot.py  mysql-connection.py
main/cogs/: avatar.py
