[tool.poetry]
name = "discord-bot1"
version = "0.1.0"
description = ""
authors = ["TheRealNoah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
disputils = "^0.1.3"
jishaku = "^1.20.0"
youtube-dl = "^2021.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
